--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -4,15 +4,22 @@
 
     <!-- Login form -->
 
-    <ScrollView
+    <RelativeLayout
         android:id="@+id/login_form"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/primary">
+        android:background="#000000">
+
+        <ImageView
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
+            android:id="@+id/iv_background" />
 
         <LinearLayout
             style="@style/LoginFormContainer"
-            android:orientation="vertical" >
+            android:orientation="vertical"
+            android:layout_centerVertical="true"
+            android:layout_alignParentLeft="true">
 
             <EditText
                 android:id="@+id/username"
@@ -45,6 +52,6 @@
                 android:paddingRight="32dp"
                 android:text="@string/login" />
         </LinearLayout>
-    </ScrollView>
+    </RelativeLayout>
 
 </merge>
