fixed graph sizing bugs, also added a logo to the welcome screen!

--- a/app/src/main/res/layout/tab_weekly.xml
+++ b/app/src/main/res/layout/tab_weekly.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent" android:layout_height="match_parent">
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent" android:layout_height="match_parent"
+    android:weightSum="1" android:orientation="vertical">
 
     <TextView
         android:layout_width="wrap_content"
@@ -9,16 +10,15 @@
         android:text=""
         android:id="@+id/current_title"
         android:padding="8dp"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true" />
+        android:layout_gravity="center_horizontal" />
 
     <org.eazegraph.lib.charts.BarChart
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:id="@+id/current_title_chart"
         android:layout_width="match_parent"
-        android:layout_height="256dp"
+        android:layout_height="wrap_content"
         android:padding="5dp"
-        android:layout_below="@id/current_title"
+        android:layout_weight="0.5"
         app:egFixedBarWidth="true"
         app:egVisibleBars="6"
         app:egBarWidth="24dp"
@@ -33,21 +33,20 @@
         android:text="All Books"
         android:id="@+id/overall_titles_text"
         android:padding="8dp"
-        android:layout_below="@id/current_title_chart"
-        android:layout_centerHorizontal="true" />
+        android:layout_gravity="center_horizontal" />
 
     <org.eazegraph.lib.charts.BarChart
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:id="@+id/all_books_chart"
         android:layout_width="match_parent"
-        android:layout_height="256dp"
+        android:layout_height="wrap_content"
         android:padding="5dp"
         app:egVisibleBars="6"
-        android:layout_below="@id/overall_titles_text"
+        android:layout_weight="0.5"
         app:egFixedBarWidth="true"
         app:egBarWidth="24dp"
         app:egEnableScroll="false"
         app:egLegendHeight="30dp"/>
 
 
-</RelativeLayout>
+</LinearLayout>
