--- a/app/src/main/res/layout/activity_welcome.xml
+++ b/app/src/main/res/layout/activity_welcome.xml
@@ -99,4 +99,12 @@
         android:layout_alignParentRight="true"
         android:padding="24dp" />
 
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/imageView"
+        android:src="@drawable/logo"
+        android:layout_above="@+id/username"
+        android:layout_alignParentLeft="true" />
+
 </RelativeLayout>
