--- a/app/src/main/res/layout/detail_parallax_layout.xml
+++ b/app/src/main/res/layout/detail_parallax_layout.xml
@@ -127,7 +127,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|right"
-        android:src="@drawable/ic_add_white_24dp"
+        android:src="@drawable/addlogfab"
         android:layout_marginBottom="16dp"
         android:layout_marginRight="16dp"
         fab:fab_colorNormal="@color/accent"
