--- a/app/src/main/res/layout/detail_parallax_layout.xml
+++ b/app/src/main/res/layout/detail_parallax_layout.xml
@@ -13,7 +13,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@color/white"
-            android:paddingBottom="8dp">
+            android:paddingBottom="0dp">
 
 
             <com.parse.ParseImageView
@@ -43,7 +43,7 @@
                 android:focusable="false"
                 android:textColor="@color/white"
                 android:enabled="true"
-                android:inputType="textMultiLine"
+                android:inputType="textNoSuggestions|textMultiLine"
                 android:longClickable="true" />
 
             <LinearLayout
@@ -105,7 +105,6 @@
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/tv_log_header"
-                android:paddingBottom="16dp"
                 android:layout_marginBottom="8dp"
                 android:background="@android:color/white" />
 
