fixed welcome screen image memory issues. still tackling the parallax bug...might not ever be fixed.

--- a/app/src/main/res/layout/detail_parallax_layout.xml
+++ b/app/src/main/res/layout/detail_parallax_layout.xml
@@ -7,11 +7,12 @@
         android:id="@+id/scroll"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:overScrollMode="always"
         android:fillViewport="true">
 
         <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:background="@color/white"
             android:paddingBottom="0dp">
 
@@ -38,7 +39,7 @@
                 android:paddingLeft="@dimen/activity_horizontal_margin"
                 android:paddingRight="@dimen/activity_horizontal_margin"
                 android:paddingTop="16dp"
-                android:textSize="24sp"
+                android:textSize="18sp"
                 android:scrollHorizontally="false"
                 android:focusable="false"
                 android:textColor="@color/white"
@@ -54,8 +55,6 @@
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/et_description"
                 android:gravity="center_horizontal">
-
-
 
                 <ImageButton
                     android:layout_width="wrap_content"
@@ -81,9 +80,7 @@
                     android:background="@drawable/logs_button"
                     android:layout_margin="8dp" />
 
-
             </LinearLayout>
-
 
             <TextView
                 android:id="@+id/tv_log_header"
@@ -106,10 +103,9 @@
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/tv_log_header"
                 android:layout_marginBottom="8dp"
+                android:animateLayoutChanges="true"
+                android:gravity="fill_vertical"
                 android:background="@android:color/white" />
-
-
-
 
         </RelativeLayout>
 
