bug fixes related to themes and lollipop devices. also landscape is now supported which is cool!

--- a/app/src/main/res/layout/activity_all_logs.xml
+++ b/app/src/main/res/layout/activity_all_logs.xml
@@ -14,7 +14,6 @@
         android:id="@+id/logs_listview"
         android:layout_below="@+id/support_toolbar"
         android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"
-        android:longClickable="true" />
+        android:layout_alignParentEnd="true" />
 
 </RelativeLayout>
