--- a/app/src/main/res/layout/activity_welcome.xml
+++ b/app/src/main/res/layout/activity_welcome.xml
@@ -24,14 +24,14 @@
         android:maxLines="1"
         android:singleLine="true"
         android:background="#a0000000"
-        android:layout_centerVertical="true"
-        android:layout_alignParentLeft="true"
         android:textSize="18sp"
         android:padding="8dp"
         android:textColor="@color/white"
         android:textColorHint="#ff8c8c8c"
-        android:layout_marginRight="36dp"
-        android:layout_marginLeft="36dp" />
+        android:layout_above="@+id/password"
+        android:layout_centerHorizontal="true"
+        android:layout_marginLeft="16dp"
+        android:layout_marginRight="16dp" />
 
     <EditText
         android:id="@+id/password"
@@ -42,16 +42,14 @@
         android:maxLines="1"
         android:singleLine="true"
         android:imeActionId="@+id/edittext_action_login"
-        android:imeActionLabel="@string/login"
         android:imeOptions="actionUnspecified"
         android:background="#a0000000"
-        android:layout_below="@+id/username"
-        android:layout_alignParentLeft="true"
         android:padding="8dp"
         android:textColor="@color/white"
         android:textColorHint="#ff8c8c8c"
-        android:layout_marginLeft="36dp"
-        android:layout_marginRight="36dp" />
+        android:layout_above="@+id/passwordagain"
+        android:layout_marginRight="16dp"
+        android:layout_alignLeft="@+id/username" />
 
     <EditText
         android:id="@+id/passwordagain"
@@ -62,16 +60,14 @@
         android:maxLines="1"
         android:singleLine="true"
         android:imeActionId="@+id/edittext_action_login"
-        android:imeActionLabel="@string/login"
         android:imeOptions="actionUnspecified"
         android:background="#a0000000"
-        android:layout_below="@+id/password"
-        android:layout_alignParentLeft="true"
         android:padding="8dp"
         android:textColor="@color/white"
         android:textColorHint="#ff8c8c8c"
-        android:layout_marginLeft="36dp"
-        android:layout_marginRight="36dp" />
+        android:layout_above="@+id/email"
+        android:layout_marginRight="16dp"
+        android:layout_marginLeft="16dp" />
 
     <EditText
         android:layout_width="match_parent"
@@ -85,10 +81,10 @@
         android:textColor="@color/white"
         android:textColorHint="#ff8c8c8c"
         android:padding="8dp"
-        android:layout_below="@id/passwordagain"
+        android:layout_above="@+id/login_button"
         android:layout_centerHorizontal="true"
-        android:layout_marginLeft="36dp"
-        android:layout_marginRight="36dp"/>
+        android:layout_marginLeft="16dp"
+        android:layout_marginRight="16dp" />
 
     <Button
         android:id="@+id/login_button"
@@ -101,7 +97,7 @@
         android:layout_above="@+id/signup_button"
         android:layout_alignParentLeft="true"
         android:layout_alignParentRight="true"
-        android:padding="24dp" />
+        android:padding="18dp" />
 
     <Button
         android:id="@+id/signup_button"
@@ -114,7 +110,7 @@
         android:layout_alignParentBottom="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentRight="true"
-        android:padding="24dp" />
+        android:padding="18dp" />
 
     <ImageView
         android:layout_width="wrap_content"
