--- a/app/src/main/res/layout/add_book_layout.xml
+++ b/app/src/main/res/layout/add_book_layout.xml
@@ -8,19 +8,7 @@
 
     <include layout="@layout/toolbar"/>
 
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/save_book"
-        android:textColor="@color/black"
-        android:id="@+id/btn_save_book"
-        android:enabled="false"
-        android:background="@drawable/button_custom"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="16dp"
-        android:paddingLeft="8dp"
-        android:paddingRight="8dp" />
+
 
     <TextView
         android:layout_width="wrap_content"
@@ -80,7 +68,7 @@
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:text="@string/cover_hint"
-        android:id="@+id/textView"
+        android:id="@+id/tv_cover_photo_hint"
         android:layout_below="@+id/iv_cover_photo"
         android:layout_centerHorizontal="true"
         android:singleLine="true" />
